# orthophoto_1.0

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  FORCE_STOP_ACTIONS.md  GAUSSIAN_SPLATTING.md  NUGET_CACHE_GUIDE.md  OPTIONS.md  PC_CONFIGURATION.md  README.md  orthophoto_gui.cpp  vcpkg.json
.github/scripts/: diagnose-cache.ps1
.github/workflows/: build-cache-nuget.yml  build-nuget.yml  manual-cancel-runs.yml  verify-nuget-cache.yml
